--- a/plugins/overlander/general/models/brands/fields.yaml
+++ b/plugins/overlander/general/models/brands/fields.yaml
@@ -1,9 +1,12 @@
 fields:
-    brands:
-        label: Brands
+    name:
+        label: 'Brand Name'
+        span: auto
+        required: 1
+        type: text
+    image:
+        label: 'Brand Logo'
         mode: image
-        imageWidth: '320'
-        imageHeight: '320'
         thumbOptions:
             mode: crop
             extension: auto
