--- a/plugins/overlander/general/controllers/banner/config_list.yaml
+++ b/plugins/overlander/general/controllers/banner/config_list.yaml
@@ -1,6 +1,6 @@
-list: $/overlander/general/models/contact/columns.yaml
-modelClass: Overlander\General\Models\Contact
-title: Contactus
+list: $/overlander/general/models/banner/columns.yaml
+modelClass: Overlander\General\Models\Banner
+title: Banner
 noRecordsMessage: 'backend::lang.list.no_records'
 showSetup: true
 showCheckboxes: true
@@ -9,3 +9,4 @@ toolbar:
     buttons: list_toolbar
     search:
         prompt: 'backend::lang.list.search_prompt'
+recordUrl: 'overlander/general/banner/update/:id'
