--- a/plugins/overlander/general/plugin.yaml
+++ b/plugins/overlander/general/plugin.yaml
@@ -1,9 +1,9 @@
 plugin:
-    name: 'overlander.general::lang.plugin.name'
-    description: 'overlander.general::lang.plugin.description'
+    name: "overlander.general::lang.plugin.name"
+    description: "overlander.general::lang.plugin.description"
     author: Overlander
     icon: oc-icon-cog
-    homepage: ''
+    homepage: ""
 navigation:
     general:
         label: General
@@ -11,18 +11,22 @@ navigation:
         icon: icon-cog
         sideMenu:
             general-supportive-pages:
-                label: 'Supportive Pages'
+                label: "Supportive Pages"
                 url: overlander/general/supportivepages
                 icon: icon-support
             general-contactus:
-                label: 'Contact Us'
+                label: "Contact Us"
                 url: overlander/general/contactus
                 icon: icon-phone
-            general-reason:
-                label: Reason
-                url: overlander/general/contactreason
-                icon: icon-question-circle
-            brands:
+            general-brands:
                 label: Brands
                 url: overlander/general/brands
                 icon: icon-picture-o
+            general-banner:
+                label: Banner
+                url: overlander/general/banner
+                icon: icon-newspaper-o
+            general-stores:
+                label: Store
+                url: overlander/general/stores
+                icon: icon-shopping-cart
