--- a/plugins/overlander/users/updates/version.yaml
+++ b/plugins/overlander/users/updates/version.yaml
@@ -13,5 +13,5 @@ v1.0.5:
     - 'Seed overlander_users_membership_tier'
     - seed_overlander_users_membership_tier.php
 v1.0.6:
-    - 'Updated table overlander_users_users'
-    - builder_table_update_overlander_users_users_2.php
+    - 'Created table overlander_users_transaction'
+    - builder_table_create_overlander_users_transaction.php
