--- a/plugins/overlander/users/models/users/fields.yaml
+++ b/plugins/overlander/users/models/users/fields.yaml
@@ -1,6 +1,6 @@
 fields:
-    vip:
-        label: Vip
+    member_no:
+        label: 'Member No.'
         span: auto
         required: 1
         type: text
@@ -14,26 +14,25 @@ fields:
         span: auto
         required: 1
         type: text
-    phone:
-        label: Phone
-        span: auto
-        required: 1
-        type: text
-    password:
-        label: Password
-        span: auto
-        required: 1
-        type: text
     country:
         label: Country
+        span: auto
+        required: 1
+        type: text
+    phone:
+        label: Phone
         span: auto
         required: 1
         type: text
     email:
         label: Email
         span: auto
-        required: 1
         type: text
+    password:
+        label: Password
+        span: auto
+        required: 1
+        type: password
     birthday:
         label: Birthday
         mode: date
@@ -46,25 +45,44 @@ fields:
         span: auto
         required: 1
         type: dropdown
-    interest:
-        label: Interest
-        span: full
-        type: text
+    is_existing_member:
+        label: 'Existing Member'
+        showSearch: true
+        span: auto
+        required: 1
+        type: dropdown
+    is_active:
+        label: Activation
+        showSearch: true
+        span: auto
+        required: 1
+        type: dropdown
+    active_date:
+        label: 'Active date'
+        mode: date
+        span: auto
+        required: 1
+        type: datepicker
     address:
         label: Address
-        span: full
+        span: auto
         required: 1
+        type: text
+    interest:
+        label: Interest
+        span: auto
         type: text
     points:
         label: Points
         span: auto
         required: 1
         type: number
-    membership_tier_id:
+    membership_tier:
         label: 'Membership Tier'
         nameFrom: name
         descriptionFrom: description
         span: auto
+        required: 1
         type: relation
     published_date:
         label: 'Published date'
