--- a/plugins/overlander/general/updates/version.yaml
+++ b/plugins/overlander/general/updates/version.yaml
@@ -1,23 +1,29 @@
 v1.0.1:
-    - "Initialize plugin"
+    - 'Initialize plugin'
 v1.0.2:
-    - "Created table overlander_general_supportivepages"
+    - 'Created table overlander_general_supportivepages'
     - builder_table_create_overlander_general_supportivepages.php
 v1.0.3:
-    - "Created table overlander_general_contact"
+    - 'Created table overlander_general_contact'
     - builder_table_create_overlander_general_contact.php
 v1.0.4:
-    - "Created table overlander_general_brands"
+    - 'Created table overlander_general_brands'
     - builder_table_create_overlander_general_brands.php
 v1.0.5:
-    - "Seeder table overlander_general_supportivepages"
+    - 'Seed table overlander_general_supportivepages'
     - seed_overlander_general_supportive_page.php
 v1.0.6:
-    - "Created table overlander_general_banner"
+    - 'Created table overlander_general_banner'
     - builder_table_create_overlander_general_banner.php
 v1.0.7:
-    - "Created table overlander_general_stores"
+    - 'Created table overlander_general_stores'
     - builder_table_create_overlander_general_stores.php
 v1.0.8:
-    - "Created table overlander_general_background"
+    - 'Created table overlander_general_background'
     - builder_table_create_overlander_general_background.php
+v1.0.9:
+    - 'Created table overlander_general_countries'
+    - builder_table_create_overlander_general_countries.php
+v1.0.10:
+    - 'Seed table overlander_general_countries'
+    - seed_overlander_general_countries.php
