--- a/plugins/overlander/users/models/users/fields.yaml
+++ b/plugins/overlander/users/models/users/fields.yaml
@@ -4,6 +4,11 @@ fields:
         span: auto
         required: 1
         type: text
+    member_prefix:
+        label: 'Member Prefix'
+        span: auto
+        required: 1
+        type: dropdown
     first_name:
         label: 'First name'
         span: auto
