--- a/plugins/overlander/users/models/users/fields.yaml
+++ b/plugins/overlander/users/models/users/fields.yaml
@@ -20,10 +20,12 @@ fields:
         required: 1
         type: text
     country:
-        label: Country
+        label: 'Country'
+        nameFrom: name
+        descriptionFrom: description
         span: auto
         required: 1
-        type: text
+        type: relation
     phone:
         label: Phone
         span: auto
@@ -68,11 +70,6 @@ fields:
         span: auto
         required: 1
         type: datepicker
-    address:
-        label: Address
-        span: auto
-        required: 1
-        type: text
     interest:
         label: Interest
         span: auto
