fix: country icon and seed SupportivePage

--- a/plugins/overlander/general/models/countries/columns.yaml
+++ b/plugins/overlander/general/models/countries/columns.yaml
@@ -22,8 +22,9 @@ columns:
         type: text
     flags:
         label: Flag
-        type: partial
-        path: ~/plugins/overlander/general/models/countries/_image.htm
+        type: text
+        # type: partial
+        # path: ~/plugins/overlander/general/models/countries/_image.htm
     created_at:
         label: "Created At"
         type: datetime
