fix: verify user and exist user

--- a/plugins/overlander/general/plugin.yaml
+++ b/plugins/overlander/general/plugin.yaml
@@ -42,3 +42,7 @@ navigation:
                 label: Interests
                 url: overlander/general/interests
                 icon: icon-info
+            general-veficication-questions:
+                label: 'Verification Questions'
+                url: overlander/general/verificationquestions
+                icon: icon-question-circle
