--- a/plugins/overlander/general/controllers/countries/config_list.yaml
+++ b/plugins/overlander/general/controllers/countries/config_list.yaml
@@ -6,6 +6,6 @@ showSetup: true
 showCheckboxes: true
 recordsPerPage: 20
 toolbar:
-    buttons: list_toolbar
     search:
         prompt: 'backend::lang.list.search_prompt'
+recordUrl: 'overlander/general/countries/preview/:id'
