--- a/plugins/overlander/general/updates/version.yaml
+++ b/plugins/overlander/general/updates/version.yaml
@@ -30,3 +30,9 @@ v1.0.10:
 v1.0.11:
     - 'Created table overlander_general_interests'
     - builder_table_create_overlander_general_interests.php
+v1.0.12:
+    - 'Created table overlander_general_verification_questions'
+    - builder_table_create_overlander_general_verification_questions.php
+v1.0.13:
+    - 'Seed table overlander_general_verification_questions'
+    - seed_overlander_general_verification_questions.php
