--- a/plugins/overlander/users/models/users/fields.yaml
+++ b/plugins/overlander/users/models/users/fields.yaml
@@ -80,9 +80,9 @@ fields:
         descriptionFrom: description
         span: auto
         required: 1
-        type: relation
-        attributes:
-            multiple: true
+        type: taglist
+        useKey: true
+        options: listInterest
     points:
         label: Points
         span: auto
