--- a/plugins/overlander/users/models/users/fields.yaml
+++ b/plugins/overlander/users/models/users/fields.yaml
@@ -14,14 +14,19 @@ fields:
         span: auto
         required: 1
         type: text
-    phone:
-        label: Mobile
-        span: auto
-        required: 1
-        type: text
     email:
         label: Email
         span: auto
+        type: text
+    phone_area_code:
+        label: Phone Code
+        span: auto
+        required: 1
+        type: dropdown
+    phone:
+        label: Phone Number
+        span: auto
+        required: 1
         type: text
     password:
         label: Password
@@ -86,7 +91,7 @@ fields:
         span: auto
         required: 1
         type: relation
-    status:
+    is_activated:
         label: Status
         showSearch: true
         span: auto
