--- a/plugins/overlander/general/updates/version.yaml
+++ b/plugins/overlander/general/updates/version.yaml
@@ -33,3 +33,6 @@ v1.0.11:
 v1.0.12:
     - 'Seed table overlander_general_interests'
     - seed_overlander_general_interests.php
+v1.0.13:
+    - 'Seed table overlander_general_brands'
+    - seed_overlander_general_brands.php
