--- a/plugins/overlander/users/models/transaction/columns.yaml
+++ b/plugins/overlander/users/models/transaction/columns.yaml
@@ -11,8 +11,8 @@ columns:
     plc:
         label: PLC
         type: number
-    desciption:
-        label: Desciption
+    description:
+        label: Description
         type: text
     invoice:
         label: Invoice
@@ -41,6 +41,9 @@ columns:
     category:
         label: Category
         type: text
+    loyalty_balance:
+        label: 'Loyalty Balance'
+        type: double
     created_at:
         label: 'Created At'
         type: datetime
