--- a/plugins/overlander/users/updates/version.yaml
+++ b/plugins/overlander/users/updates/version.yaml
@@ -33,3 +33,15 @@ v1.0.11:
 v1.0.12:
     - 'Updated table overlander_users_invoice_details'
     - builder_table_update_overlander_users_invoice_details_2.php
+v1.0.13:
+    - 'Drop table overlander_users_invoices'
+    - builder_table_delete_overlander_users_invoices.php
+v1.0.14:
+    - 'Updated table overlander_users_transaction'
+    - builder_table_update_overlander_users_transaction_3.php
+v1.0.15:
+    - 'Updated table overlander_users_invoice_details'
+    - builder_table_update_overlander_users_invoice_details_3.php
+v1.0.16:
+    - 'Drop table overlander_users_transaction'
+    - builder_table_delete_overlander_users_transaction.php
