--- a/plugins/overlander/transaction/models/transactiondetail/columns.yaml
+++ b/plugins/overlander/transaction/models/transactiondetail/columns.yaml
@@ -26,6 +26,9 @@ columns:
     fprice:
         label: Fprice
         type: text
+    point:
+        label: Point
+        type: text
     category:
         label: Category
         type: text
