--- a/plugins/overlander/transaction/models/pointhistory/columns.yaml
+++ b/plugins/overlander/transaction/models/pointhistory/columns.yaml
@@ -7,7 +7,8 @@ columns:
         type: number
     type:
         label: Type
-        type: text
+        type: partial
+        path: $/overlander/transaction/models/pointhistory/_type.htm
     amount:
         label: Amount
         type: number
