add update user by token, get point history by token

--- a/plugins/overlander/transaction/models/pointhistory/columns.yaml
+++ b/plugins/overlander/transaction/models/pointhistory/columns.yaml
@@ -4,7 +4,7 @@ columns:
         type: number
     member_no:
         label: 'Member No'
-        type: number
+        type: text
     type:
         label: Type
         type: partial
