--- a/plugins/overlander/general/updates/version.yaml
+++ b/plugins/overlander/general/updates/version.yaml
@@ -42,3 +42,6 @@ v1.0.14:
 v1.0.15:
     - 'Seed table overlander_general_membership_tier'
     - seed_overlander_general_membership_tier.php
+v1.0.16:
+    - 'Seed table overlander_general_banners'
+    - seed_overlander_general_banners.php
